--- a/marketplace_project/templates/main_app/base.html
+++ b/marketplace_project/templates/main_app/base.html
@@ -1,10 +1,18 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="{% static 'main_app/css/styles.css' %}">
     <title>Title</title>
+
+
 </head>
 <body>
+
+hello from base
+
+
 
 </body>
 </html>
